force-app/src/objects/c2g__BudgetsAndBalancesSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Balance Settings</description>
    <fields>
        <fullName>c2g__BalanceUpdateBatchSize__c</fullName>
        <label>Balance Update Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceUpdateThreshold__c</fullName>
        <label>Balance Update Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DisableActualPeriodValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Actual Period Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeZeroBalances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Zero Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingBalanceUpdateBatchSize__c</fullName>
        <label>Reporting Balance Update Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingBalanceUpdateThreshold__c</fullName>
        <label>Reporting Balance Update Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Balance Settings</label>
</CustomObject>